# qwqw

User/: INSTALL_TERMUX.md  README.md  README_ADVANCED.md  admin.py  attached_assets_main.py  auth_termux.py  config.py  install_termux.sh  log_management.py  log_management_main.py  main.py  moderation.py  pyproject.toml  run.py  run_userbot.py  simple_start.py  start_userbot.sh  stats.py  termux_launcher.py  termux_start.sh  test.py  update_check.sh  update_userbot.sh  userbot.py  userbot.session
User/attached_assets/: INSTALL_TERMUX.md  admin.py  auth_termux.py  config.py  console_run.py  main.py  moderation.py  replit.nix  run.py  run_termux.py  run_userbot.sh  start_termux.sh  stats.py  termux_start.sh  update_check.sh  userbot.py  userbot.session  utils.py
User/utils/: __init__.py  commands.py  helpers.py
